--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "baseUrl": "src",
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "esModuleInterop": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
@@ -20,6 +22,6 @@
     "strictPropertyInitialization": false,
     "target": "ES2020"
   },
-    "include": ["./index.ts", "src/**/*"],
-    "exclude": ["node_modules"]
+    "include": ["./index.ts", "src/**/*", "src/**/*.ts"],
+    "exclude": ["node_modules", "./tsconfig.json"]
 }
