--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "keywords": [],
     "license": "ISC",
     "dependencies": {
-        "ws": "^8.8.0",
-        "dotenv": "^16.4.2"
+        "dotenv": "^16.4.2",
+        "ws": "^8.8.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.3",
         "@types/node": "^20.11.17",
+        "@types/ws": "^8.5.10",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
         "cross-env": "^7.0.3",
@@ -33,6 +33,7 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-promise": "^6.1.1",
+        "nodemon": "^3.0.3",
         "prettier": "^3.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
